@@ -22,6 +22,8 @@ None
 
 Bugs fixed in 3.28.1
 ====================
+[3518732] Custom special symbol set now handled correctly in Generate
+Password dialog box.
 [3515692] Fixed crash with Generate Password switching to default
 policy with > 1 named policy.
 [3514819] Add Group now works again.
